[package]
name = "asm6502"
version = "0.1.2"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
description = "A basic 6502 assembler."
license = "MIT"
repository = "https://github.com/bgourlie/asm6502"
readme = "README.md"
keywords = ["6502", "assembler"]
edition = "2021"

[badges]
travis-ci = { repository = "bgourlie/asm6502", branch = "master" }

[dependencies]
nom = "^2.0"
