[package]
name = "asm6502"
version = "0.1.2"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
description = "A basic 6502 assembler."
license = "MIT"
repository = "https://github.com/bgourlie/asm6502"
readme = "README.md"
keywords = ["6502", "assembler"]
edition = "2021"

[badges]
travis-ci = { repository = "bgourlie/asm6502", branch = "master" }

[dependencies]
nom = "7.0"
thiserror = "1"
clap = { version = "3.2.6", features = ["derive", "cargo"], optional = true }
anyhow = { version = "1.0.58", optional = true }

[features]
default=["assembler"]
assembler=["clap", "anyhow"]

[[bin]]
name="as65"
required-features=["assembler"]